--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src='//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js'></script><script src='//production-assets.codepen.io/assets/editor/live/events_runner-73716630c22bbc8cff4bd0f07b135f00a0bdc5d14629260c3ec49e5606f98fdd.js'></script><script src='//production-assets.codepen.io/assets/editor/live/css_live_reload_init-2c0dc5167d60a5af3ee189d570b1835129687ea2a61bee3513dee3a50c115a77.js'></script><meta charset='UTF-8'><meta name="robots" content="noindex"><link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico" /><link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111" /><link rel="canonical" href="https://codepen.io/supah/pen/WwrJpw?limit=all&page=86&q=box" />
 
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
@@ -99,7 +99,7 @@
                 <p>Trees are an important part of every community. Our streets, parks, playgrounds and backyards are lined with trees that create a peaceful, aesthetically pleasing environment. Trees increase our quality of life by bringing natural elements and wildlife habitats into urban settings. We gather under the cool shade they provide during outdoor activities with family and friends. Many neighborhoods are also the home of very old trees that serve as historic landmarks and a great source of town pride.</p>
             </div>
             <div class="hero-text col-md-4 pull-right" id="logo" style="display: flex;justify-content: center;align-items: center; flex-direction: column;">    
-                <img src="download.png" >
+                <img src="../nload.png" >
             </div>
         </div>
     </div>
